# tool-i-wish-existed-repeater

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: ARCHITECTURE.md  INGESTION.md
scripts/: add_book.sh  add_toeic.py  align.py  backfill_phonetics.py  clean_toeic.py  force_align.py  parse_text.py  range_server.py  snap_to_silence.py  transcribe_as_book.py  transcribe_wcpp.py
web/: app.js  index.html  styles.css
